# notetaker

./: AGENTS.md  CONTEXT.md  README.md  notetaker.bat  notetaker.sh  pyproject.toml
docs/adr/: 0001-llm-via-cli-externo.md  0002-audio-local-texto-remoto.md  0003-transcricao-batch-ao-final.md  0004-diarizacao-nivel1-padrao.md  0005-dispositivos-auto-detectados.md
notetaker/: __init__.py  audio.py  cli.py  config.py  diarize.py  llm.py  pipeline.py  prompts.py  storage.py  summarize.py  transcribe.py  ui.py
